# fair_and_fast_k_center_clustering

./: .gitignore  Cargo.toml  README.md  classIris_crop.2dspace  ff_k_center-1.2.2-cp36-abi3-manylinux_2_12_x86_64.manylinux2010_x86_64.whl  ff_k_center-1.2.2-cp36-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  groupSize400.4dspace  maritalCreditCard.2dspace  maritalCreditCard.npz  test.2dspace
experiments/: computational_study.ipynb
experiments/data/: countQuery.npz  genderDiabetes.npz  raceAdult.npz
jupyter/: ff_k_center_showcase.ipynb  notebook.ipynb
python_scripts/: create_2d_space.py  create_metric_space.py  plot_2d_space.py  plot_metric.py
showcase/: example_script.py  showcase.ipynb  test_instance.2dspace  test_instance.3dspace
src/: assertions.rs  buckets.rs  clustering.rs  datastructures.rs  gonzales.rs  lib.rs  main.rs  make_private.rs  numpy_interface.rs  phase1.rs  phase2.rs  phase3.rs  phase4.rs  phase5.rs  python_interface.rs  space.rs  types.rs  utilities.rs
src/make_private/: buckets.rs
src/phase2/: buckets.rs  flow.rs  settle.rs  with_sorting.rs
src/phase4/: color_flow.rs  neighborhood.rs
