[package]
name = "ff_k_center"
version = "1.2.2"
edition = "2021"
license = "MIT"
description = "A linear-time k-center algorithm with fairness conditions and worst-case guarantees that is very fast in practice. Includes python bindings."
homepage = "http://leon.sering.eu/project/fair_and_fast_k_center_clustering/"
readme = "README.md"
repository = "https://github.com/LeonSering/fair_and_fast_k_center_clustering"
keywords = ["algorithm", "k-center", "clustering", "fairness", "data science"]
categories = ["algorithms", "mathematics", "science"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
]

[profile.phase2_benchmark]
inherits = "release"
debug-assertions = true

[lib]
name = "ff_k_center"
path = "src/lib.rs"

# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib","rlib"]

[[bin]]
name = "ff_k_center_bin"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rayon = "^1.8"
num_cpus = "1.16"

[dependencies.pyo3]
version = "0.14.4"
features = ["extension-module","abi3-py36"]

